mType/tests/testFiles/import/error/importMissingFrom.mt
// Test: Missing 'from' keyword
import { SomeClass }

var obj = SomeClass();
